--- a/media.css
+++ b/media.css
@@ -1,11 +1,11 @@
 @media only screen and (max-width: 400px) {
     body {
-        overflow: hidden;
+        overflow-x: hidden;
     }
 
     .main {
         width: 100%;
-        overflow: hidden;
+        overflow-x: hidden;
     }
 
     .main nav {
