--- a/index.css
+++ b/index.css
@@ -184,7 +184,7 @@ nav .search{
 }
 
 .best .left .top{
-    width:100%;
+    width: 100%;
     height: 15%;
     /* background-color: orange; */
 }
@@ -254,7 +254,8 @@ nav .search{
     width:100%;
     height: 85%;
     /* background-color: red; */
-     display: flex;
+    display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: space-between;
 }
@@ -309,7 +310,7 @@ nav .search{
 
 footer{
     width:100%;
-    height: 280px;
+    /* height: 280px; */
     background-color: black;
     padding: 0px;
 }
