--- a/media.css
+++ b/media.css
@@ -9,19 +9,30 @@
     }
 
     .main nav {
-        width:108%;
+        width: 108%;
         padding: 6px 0vw;
         margin-left: -7vw;
         justify-content: space-between;
     }
-    .main nav .search{
+
+    .main .login {
+        padding: 9px 2.8vw;
+    }
+
+    .main .login i:first-child {
+        font-size: 1.38rem;
+    }
+
+    .main nav .search {
         width: 50%;
         display: none;
     }
-    .main nav .seller{
+
+    .main nav .seller {
         display: none;
     }
-    .main nav>i{
+
+    .main nav>i {
         visibility: hidden;
     }
 
@@ -31,12 +42,206 @@
 
     .slider {
         width: 100%;
-        height: 155px;
+        height: 147px;
     }
 
     .slider .swiper-slide img {
         width: 100%;
         object-fit: cover;
         object-position: center;
+    }
+
+    .best {
+        width: 100%;
+        height: 230px;
+        /* left box and right box ka gap */
+        gap: 4px;
+        align-items: center;
+    }
+
+    .best .left {
+        width: 70%;
+        height: 100%;
+        padding: 5px 2.4vw;
+        overflow: hidden;
+    }
+
+    .best .left .top {
+        /* background-color: purple; */
+        width: 100%;
+        height: 15%;
+    }
+
+    .best .left .bottom {
+        width: 100%;
+        height: 85%;
+    }
+
+    .best .left .bottom .swiper-slide {
+        width: 100px;
+        height: 100%;
+        /* border: 2px solid orange; */
+        padding: 4px 4px;
+    }
+
+    .best .left .bottom .swiper-slide img {
+        width: 100%;
+        height: 50%
+    }
+
+    .best .left .bottom .swiper-slide p {
+        font-size: 0.8rem;
+        width: 100%;
+        white-space: wrap;
+        text-align: center;
+        line-height: 15px;
+        text-transform: capitalize;
+        margin-top: 1px;
+        /* background-color: peru; */
+    }
+
+    .best .left .bottom .swiper-slide h2 {
+        margin-top: 6px;
+        font-size: 1rem;
+        padding: 5px 3px;
+    }
+
+    .best .left .bottom .swiper-slide h2:hover {
+        background-color: blue;
+        border-radius: 10px;
+        color: white;
+    }
+
+    .best .left .top h1 {
+        font-size: 1.1rem;
+    }
+
+    .best .right {
+        width: 30%;
+        height: 95%;
+        background-size: cover;
+        background-position: center;
+        /* background-color: red; */
+    }
+
+    .beauty {
+        width: 100%;
+        height: 270px;
+        overflow: hidden;
+    }
+
+    .beauty .top {
+        width: 100%;
+        height: 13%;
+        /* background-color: blue; */
+        display:flex;
+        align-items: center;
+    }
+
+    .beauty .top h2 {
+        font-size: 1.2rem;
+    }
+    .beauty .bottom {
+        width: 100%;
+        height: 87%;
+        /* background-color: limegreen; */
+        flex-direction: row;
+        flex-wrap: nowrap;
+    }
+    .beauty .bottom .card{
+        /* border: 2px solid orange; */
+        padding: 3px 0.9vw;
+    }
+    .beauty .bottom .card p{
+        margin-top: 2px;
+    }
+    .beauty .bottom .card h2{
+        font-size: 1.2rem;
+    }
+    
+    /* sport */
+    .sport{
+        width: 100%;
+        height: 220px;
+    }
+    .sport .top{
+        width:100%;
+        height: 14%;
+        /* background-color: red; */
+    }
+    .sport .top h2{
+        font-size: 1.2rem;
+    }
+    .sport .bottom{
+        width:100%;
+        height: 86%;
+        /* background-color: palevioletred; */
+    }
+    .sport .bottom .card{
+        /* border: 2px solid orange; */
+        padding: 6px 3vw;
+    }
+    .sport .bottom .card p{
+        margin-top: 1px;
+    }
+    .sport .bottom .card h2{
+        font-size: 1.2rem;
+    }
+    /* code of fotter */
+    footer .top {
+        width: 100%;
+        /* height: 280px; */
+        padding-top: 7px;
+        padding-bottom: 7px;
+        flex-wrap: wrap;
+        flex-direction: row;
+        align-items: baseline;
+        gap: 20px 10px;
+        /* background-color: red; */
+    }
+
+    footer .top p {
+        font-weight: 600;
+    }
+
+    footer .top .about {
+        width: 45%;
+        height: 80%;
+        /* background-color: purple; */
+    }
+
+    footer .top .group {
+        width: 50%;
+        height: 80%;
+        /* background-color: peru; */
+    }
+
+    footer .top .help {
+        width: 45%;
+        height: 80%;
+        /* background-color: peru; */
+    }
+
+    footer .top .consumer_policy {
+        width: 50%;
+        height: 80%;
+        /* background-color: peru; */
+    }
+
+    footer .top .a {
+        margin-top: 4px;
+        line-height: 23px;
+    }
+
+    footer .top .a a {
+        font-size: 1rem;
+    }
+
+    footer .bottom {
+        padding: 8px 0px;
+    }
+
+    footer .bottom p {
+        font-size: 1.01rem;
     }
 }
