little chang in reponsiveness

--- a/media.css
+++ b/media.css
@@ -163,6 +163,7 @@
     .sport{
         width: 100%;
         height: 220px;
+        overflow: hidden;
     }
     .sport .top{
         width:100%;
