--- a/index.css
+++ b/index.css
@@ -310,7 +310,7 @@ nav .search{
 
 footer{
     width:100%;
-    /* height: 280px; */
+    height: 280px;
     background-color: black;
     padding: 0px;
 }
