--- a/index.css
+++ b/index.css
@@ -64,6 +64,9 @@ nav .search{
     justify-content: center;
     padding: 9px 1vw;
     transition: all 0.3s 0s ease-in-out;
+    cursor: pointer;
+    border: none;
+    background-color: transparent;
 }
 .login .dropdown{
     transition: all 0.7s 0s ease-in-out;
@@ -77,7 +80,7 @@ nav .search{
 }
 .login:hover{
     background-color: blue; 
-    border-radius: 9px;
+    border-radius: 12px;
     color: white;
 }
 .login:hover .dropdown{
@@ -87,6 +90,7 @@ nav .search{
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
 }
 .cart h2{
     font-size: 1.1rem;
@@ -100,6 +104,7 @@ nav .search{
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
 }
 .seller h2{
     font-size: 1.1rem;
@@ -377,5 +382,108 @@ footer .bottom{
 }
 footer .bottom p{
     font-size: 1.7rem;
+    color: white;
+}
+
+/*login Container form page  */
+.login_container{
+    width:100%;
+    height: 100%;
+    background-color: rgba(30, 31, 30, 0.685);
+    position: absolute;
+    top: 0;
+    z-index: 99;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* visibility: hidden; */
+    transform: scale(0);
+}
+.cross{
+    position: absolute;
+    top: 100px;
+    right: 460px;
+    color: black;
+    z-index: 6;
+    padding: 6px 8px;
+    color: white;
+}
+.cross:hover{
+    background-color: rgb(202, 200, 200);
+    border-radius: 15px;
+    color: black
+}
+.login_form{
+    width: 330px;
+    height: 370px;
+    background-color: rgb(151, 151, 151);
+    overflow: hidden;
+    border-radius: 7px;
+    position: relative;;
+}
+.login_form form>h2{
+    margin-top: 17px;
+    text-align: center;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    color: rgb(25, 250, 17);
+    /* background-color: #fff; */
+}
+.login_form .form_info{
+    width: 100%;
+    height: 210px;
+    /* background-color: purple; */
+    padding: 17px 1.6vw;
+}
+.login_form .form_info .input{
+    width: 100%;
+    height: 40px;
+    background-color: white;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0px 20px;
+    margin-top: 6px;
+    margin-bottom: 16px;
+}
+.login_form .form_info .input input{
+    border: none;
+    background-color: transparent;
+    height: 77%;
+    width: 87%;
+    font-size: 0.9rem;
+    font-weight: 400;
+}
+.login_form .form_info .input input:focus{
+    border: none;
+    outline: none;
+}
+
+.login_form .form_info .input i{
+    color: rgb(77, 76, 76);
+}
+.login_form .form_info .sec_label{
+    margin-top: 20px;
+}
+.login_form .button{
+    width: 100%;
+    /* background-color: rgb(128, 0, 55); */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 10px;
+    padding: 0px 2vw;
+}
+.login_form .button button{
+    padding: 9px 2.9vw;
+    border-radius: 32px;
+    font-size: 1rem;
+    font-weight: 500;
+    border: none;
+}
+.login_form .button button:hover{
+    background-color: blue;
     color: white;
 }
