--- a/media.css
+++ b/media.css
@@ -246,3 +246,33 @@
         font-size: 1.01rem;
     }
 }
+
+/* login form  */
+.login_form .form_info{
+    width: 100%;
+    height: 210px;
+    /* background-color: purple; */
+    padding: 17px 4.2vw;
+}
+.login_form .button button{
+    padding: 10px 10vw;
+    border-radius: 30px;
+}
+.login_form .button{
+    padding: 0px 5vw;
+    width: 100%;
+    /* background-color: rgb(128, 0, 55); */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 10px;
+}
+.cross{
+    position: absolute;
+    top: 90px;
+    right: 20px;
+    color: black;
+    z-index: 6;
+    padding: 6px 8px;
+    color: white;
+}
