--- a/media.css
+++ b/media.css
@@ -267,6 +267,19 @@
     justify-content: space-between;
     margin-top: 10px;
 }
+.login_form .form_info .input{
+    width: 100%;
+    height: 45px;
+    border-radius: 26px;
+}
+.login_form .form_info .input input{
+    border: none;
+    background-color: transparent;
+    height: 90%;
+    width: 87%;
+    font-size: 1.05rem;
+    font-weight: 400;
+}
 .cross{
     position: absolute;
     top: 90px;
