--- a/media.css
+++ b/media.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 410px) {
+@media only screen and (max-width: 400px) {
     body {
         overflow-x: hidden;
     }
@@ -207,7 +207,7 @@
         padding-bottom: 7px;
         flex-wrap: wrap;
         flex-direction: row;
-        align-items: baseline;
+        /* align-items: baseline; */
         gap: 20px 10px;
         /* background-color: red; */
     }
