--- a/index.css
+++ b/index.css
@@ -5,6 +5,7 @@
     padding: 0px;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
+    color: orange;
 }
 html,body{
     width: 100%;
@@ -337,7 +338,7 @@ footer .top .a{
 }
 footer .top a{
     text-decoration: none;
-    color: white;
+    color: white !important;
 }
 footer .top a:hover{
     padding-bottom: 6px;
